# shoreguard

./: .dockerignore  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  404.html  CHANGELOG.md  Caddyfile  Dockerfile  Justfile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: auto-tag.yml  ci.yml  docs.yml  release.yml  test-migrations.yml
admin/database-migrations/: index.html
admin/deployment/: index.html
admin/gateway-roles/: index.html
admin/local-mode/: index.html
admin/migration-runbook/: index.html
admin/oidc/: index.html
admin/rbac/: index.html
admin/rollback/: index.html
admin/service-principals/: index.html
admin/troubleshooting/: index.html
architecture/: index.html
changelog/: index.html
charts/openshell-cluster/: README.md  values.yaml
charts/shoreguard/: Chart.yaml  README.md  values.production.yaml  values.yaml
concepts/architecture/: index.html
concepts/security/: index.html
deploy/: .env.example  Caddyfile  README.md  docker-compose.standalone.yml  docker-compose.yml  openclaw.json
deploy/grafana/: shoreguard.json
deploy/production-k8s/: index.html
development/code-structure/: index.html
development/contributing/: index.html
development/proto-stubs/: index.html
development/testing/: index.html
docs/: architecture.md  index.md
docs/admin/: database-migrations.md  deployment.md  gateway-roles.md  local-mode.md  migration-runbook.md  oidc.md  rbac.md  rollback.md  service-principals.md  troubleshooting.md
docs/concepts/: architecture.md  security.md
docs/deploy/: production-k8s.md
docs/development/: code-structure.md  contributing.md  proto-stubs.md  testing.md
docs/getting-started/: installation.md  migration.md  quickstart.md
docs/guide/: approvals.md  gateways.md  monitoring.md  overview.md  policies.md  sandboxes.md
docs/guides/: approval-workflows.md  approvals.md  audit.md  boot-hooks.md  bypass-detection.md  gateway-discovery.md  gateways.md  gitops-merge.md  gitops.md  monitoring.md  nemoclaw-migration.md  policy-pinning.md  policy-prover.md  sandboxes.md  sbom.md  webhooks.md
docs/integrations/: oidc-providers.md  prometheus.md
docs/operations/: cert-rotation.md
docs/reference/: api-internals.md  api.md  cli.md  client.md  config.md  configuration.md  presets.md  settings.md  surface-coverage.md  terraform.md
frontend/css/: auth.css  cards.css  log.css  policy.css  search.css  style.css  tables.css  utilities.css  wizard.css
frontend/js/: alpine-init.js  app.js  approvals.js  audit.js  auth.js  boot_hooks.js  bypass.js  components.js  constants.js  dashboard.js  gateway-switcher.js  gateway.js  groups.js  keys.js  logs.js  policy.js  prover.js  providers.js  rule.js  sandboxes.js  sbom.js  search.js  table-utils.js  theme-init.js  users.js  webhooks.js  websocket.js  wizard.js
frontend/templates/: base.html
getting-started/installation/: index.html
getting-started/migration/: index.html
getting-started/quickstart/: index.html
guide/approvals/: index.html
guide/gateways/: index.html
guide/monitoring/: index.html
guide/overview/: index.html
guide/policies/: index.html
guide/sandboxes/: index.html
guides/approval-workflows/: index.html
guides/approvals/: index.html
guides/audit/: index.html
guides/boot-hooks/: index.html
guides/bypass-detection/: index.html
guides/gateway-discovery/: index.html
guides/gateways/: index.html
guides/gitops/: index.html
guides/gitops-merge/: index.html
guides/monitoring/: index.html
guides/nemoclaw-migration/: index.html
guides/policies/: index.html
guides/policy-pinning/: index.html
guides/policy-prover/: index.html
guides/sandboxes/: index.html
guides/sbom/: index.html
guides/webhooks/: index.html
images/openclaw/: Dockerfile  README.md  entrypoint.sh  sandbox-init.sh
integrations/oidc-providers/: index.html
integrations/prometheus/: index.html
integrations/terraform/: index.html
operations/cert-rotation/: index.html
reference/api/: index.html
reference/api-internals/: index.html
reference/cli/: index.html
reference/client/: index.html
reference/config/: index.html
reference/configuration/: index.html
reference/models/: index.html
reference/presets/: index.html
reference/services/: index.html
reference/settings/: index.html
reference/surface-coverage/: index.html
reference/terraform/: index.html
scripts/: backup.py  check_coverage.py  generate_proto.py  m12-federation.md  m12_demo.py  m17_demo.py  m21_demo.py  m22_demo.py  m23-gitops.md  m23_demo.py  m7-demo.md  m7_demo.py  m8-demo.md  m8_demo.py  restore.py  verify_migrations.sh
scripts/fixtures/: sample_cyclonedx.json
search/: search_index.json
shoreguard/: __init__.py  config.py  db.py  exceptions.py  gateway_runtime.py  models.py  openshell.yaml  presets.py  sandbox_templates.py  settings.py
shoreguard/api/: auth.py  (+21 more)
tests/: conftest.py  test_account_lockout.py  test_api_approval_routes.py  test_api_audit_routes.py  test_api_auth.py  test_api_boot_hooks_routes.py  test_api_bypass_routes.py  test_api_discovery_routes.py  test_api_gateway_routes.py  test_api_main.py  test_api_pages.py  test_api_policy_routes.py  test_api_provider_routes.py  test_api_routes.py  test_api_sbom_routes.py  test_api_template_routes.py  test_api_webhook_routes.py  test_approval_service.py  test_approval_workflow.py  test_audit_integrity.py  test_audit_service.py  test_auth.py  test_auth_edge_cases.py  test_auth_flows.py  test_auth_mutations.py  test_backup_restore.py  test_boot_hooks_service.py  test_bypass_service.py  test_cert_rotation_service.py  test_cli_config.py  test_cli_policy.py  test_client_approvals.py  test_client_deps.py  test_client_init.py  test_client_mtls_hardening.py  test_client_policies.py  test_client_providers.py  test_client_resilience.py  test_client_sandboxes.py  test_config.py  (+53 more)
(+177 files in other folders)
