[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shoreguard"
version = "0.32.0"
description = "Open source control plane for NVIDIA OpenShell"
license = "Apache-2.0"
readme = "README.md"
keywords = ["openshell", "nvidia", "sandbox", "security", "ai-agents", "control-plane"]
authors = [
    { name = "Florian Hofstetter", email = "flo.max.hofstetter@gmail.com" },
]
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "fastapi>=0.135",
    "uvicorn>=0.42",
    "grpcio>=1.78",
    "protobuf>=5.29",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "websockets>=16.0",
    "typer>=0.15",
    "sqlalchemy>=2.0",
    "alembic>=1.15",
    "pwdlib[bcrypt]>=0.2",
    "prometheus_client>=0.21",
    "aiosmtplib>=3.0",
    "httpx>=0.28",
    "aiosqlite>=0.22.1",
    "pydantic-settings>=2.0",
    "PyJWT[crypto]>=2.9",
    "z3-solver>=4.13",
    "dnspython>=2.6",
    "opentelemetry-api>=1.29",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-grpc>=0.50b0",
    "opentelemetry-exporter-otlp-proto-http>=1.29",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.78",
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.8",
    "httpx>=0.28",
    "ruff>=0.15",
    "pyright>=1.1",
    "hatchling>=1.29.0",
    "mutmut>=3.5",
    "pydoclint>=0.8",
    "psycopg[binary]>=3.1",
    "pip-audit>=2.10.0",
    "pre-commit>=4.0",
    "detect-secrets>=1.5",
    "bandit>=1.9.4",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.29",
]

[project.urls]
Homepage = "https://github.com/FloHofstetter/shoreguard"
Repository = "https://github.com/FloHofstetter/shoreguard"
Documentation = "https://flohofstetter.github.io/shoreguard/"
Issues = "https://github.com/FloHofstetter/shoreguard/issues"

[project.scripts]
shoreguard = "shoreguard.api.main:cli"

[tool.hatch.build.targets.wheel.force-include]
"frontend" = "shoreguard/_frontend"

[tool.hatch.build.targets.sdist]
include = ["shoreguard", "frontend", "LICENSE", "README.md"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "D"]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"shoreguard/client/_proto/**" = ["D", "E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
include = ["shoreguard", "tests"]
exclude = ["shoreguard/client/_proto"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires a live OpenShell gateway (deselect with -m 'not integration')",
    "postgres: requires a live PostgreSQL database (deselect with -m 'not postgres')",
]

[tool.coverage.run]
source = ["shoreguard"]
omit = ["shoreguard/client/_proto/*"]

[tool.coverage.report]
show_missing = true

[tool.mutmut]
paths_to_mutate = ["shoreguard"]
tests_dir = ["tests"]
do_not_mutate = ["shoreguard/client/_proto/*"]
# `frontend` is needed because the FastAPI app serves templates from there;
# `scripts` is imported by tests/test_backup_restore.py via `from scripts.backup`.
also_copy = ["frontend", "scripts"]
runner = "python -m pytest -x --ignore=tests/integration"

[tool.pydoclint]
style = "google"
skip-checking-short-docstrings = false
skip-checking-raises = false
check-arg-order = true
check-return-types = true
check-yield-types = true
check-class-attributes = true
check-style-mismatch = true
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = true
require-return-section-when-returning-nothing = false
require-yield-section-when-yielding-nothing = false
should-document-private-class-attributes = false
should-document-star-arguments = true
should-declare-assert-error-if-assert-statement-exists = true
treat-property-methods-as-class-attributes = true
allow-init-docstring = false
exclude = '\.venv/|_proto/|tests/'
